finalizacion del tp3 parte 1

--- a/tp3_CocaMauricioJoaquin/src/main/resources/templates/index.html
+++ b/tp3_CocaMauricioJoaquin/src/main/resources/templates/index.html
@@ -1,10 +1,188 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Coca Mauricio Joaquin</title>
 </head>
 <body>
+
+<header>
+<h1>Sobre Java</h1>
+</header>
+
+<nav>
+ <ul>
+ <li><a href="">Introduccion</a></li>
+ <li><a href="">Caracteristicas</a></li>
+ <li><a href="">Ediciones</a></li>
+ </ul>
+</nav>
+
+<main>
+
+<section id="introduccion">
+ <h2>Introduccion</h2>
+ 
+ <p>
+Es una tecnología que incluye un lenguaje de programación de alto nivel y una plataforma informática que difiere respecto de las plataformas mas habituales
+debido a que es una plataforma software que se ejecuta sobre las prestaciones que brinda otra
+plataforma que gestiona el hardware. Esto significa que se puede montar la plataforma Java sobre cualquier plataforma base.
+</p>
+<p>
+Cuenta con su propio interprete (JVM) que permiten traducir el código creado
+por un programador en un lenguaje de alto nivel a código máquina. 
+</p>
+<p>
+la JVM es particularmente especial. En lugar de traducir código fuente, traduce un tipo de
+código denominado bytecode al código máquina de la plataforma base al momento de ejecutar
+la aplicación.
+</p>
+<p>
+La API Java es una gran colección de componentes software que proveen muchas capacidades
+útiles para el desarrollador. Está agrupada dentro de bibliotecas conformadas por
+clases e interfaces. Estas bibliotecas
+se conocen con el nombre de paquetes
+ </p>
+ 
+</section>
+
+
+<section id="caracteristicas">
+<h2>Caracteristicas de Java</h2>
+<table>
+<tr>
+	<th>Caracteristicas</th>
+	<th>descripcion</th>
+</tr>
+
+<tr>
+	<td>Sencillo</td>
+	<td>sintaxis similar a c y c++ (se encuentra mejorada)</td>
+</tr>
+
+<tr>
+	<td>Orientado a objetos</td>
+	<td>todo en Java es concebido como un objeto</td>
+</tr>
+
+<tr>
+	<td>Distribuido</td>
+	<td> permite desarrollar aplicaciones cliente/servidor en arquitecturas distribuidas</td>
+</tr>
+
+<tr>
+	<td>Interpretado</td>
+	<td> La ejecución de un programa Java se realiza mediante el intérprete JVM</td>
+</tr>
+
+<tr>
+	<td>Robusto</td>
+	<td>es un lenguaje fuertemente tipado y estricto.</td>
+</tr>
+
+<tr>
+	<td>Seguro</td>
+	<td>vigila la seguridad de las aplicaciones y los sistemas</td>
+</tr>
+
+<tr>
+	<td>Independiente de las arquitecturas</td>
+	<td>el compilador genera un bytecode que es independiente de cualquier arquitectura</td>
+</tr>
+
+<tr>
+	<td>Portable</td>
+	<td>se puede desplegar en diferentes plataformas sin adaptación</td>
+</tr>
+
+<tr>
+	<td>Eficaz</td>
+	<td>optimización de la interpretación del código(JIT)</td>
+</tr>
+
+<tr>
+	<td>Multitarea</td>
+	<td>permite efectuar simultáneamente varias tareas</td>
+</tr>
+
+<tr>
+	<td>Dinámico</td>
+	<td>es posible realizar una o mas modificaciones sin tener que efectuar una actualización</td>
+</tr>
+</table>
+
+</section>
+
+<section id="ediciones">
+<h2>Ediciones de la plataforma java</h2>
+
+<p>
+La configuración de una plataforma Java afecta fundamentalmente los servicios que esta ofrece,
+las herramientas adicionales que incorpora y también aspectos menos visibles, tales como el
+modo de funcionamiento de la JVM. De acuerdo con la documentación actual de Oracle se
+puede distinguir las siguientes cuatro ediciones de Java:
+</p>
+
+<ul>
+	<li>Java SE</li>
+	<li>Java FX</li>
+	<li>Java EE</li> 
+	<li>Java ME</li>
+</ul>
+
+<h3>Java SE:</h3>
+<p>
+conocida como Standard Edition es la edición más difundida de la plataforma
+Java. Incorpora el JDK, necesario para crear aplicaciones de escritorio con o sin interfaz
+gráfica de usuario, acceso al sistema de archivos, comunicación a través de redes,
+concurrencia y otros servicios básicos.
+</p>
+
+<h3>Java FX:</h3>
+<p>
+originalmente JavaFX era una alternativa a Java SE para el desarrollo de
+proyectos de tipo RIA (Rich Internet Applications), con un núcleo más ligero y fácil de
+distribuir, capacidad de aceleración 3D aprovechando la GPU, servicios avanzados para
+producción de gráficos y animaciones, y un mecanismo simplificado para el diseño de
+interfaces de usuario. JavaFX forma parte de Java SE desde la versión 7 de dicha edición
+de la plataforma (y se eliminó de la misma a partir de la versión 13).
+</p>
+
+<h3>Java EE:</h3>
+<p>
+denominada Enterprise Edition de la plataforma Java, es la versión dirigida al
+desarrollo de soluciones software que se ejecutarán en un servidor de aplicaciones. A
+las capacidades de Java SE, la edición EE agrega servicios para gestionar la persistencia
+de objetos en bases de datos, hacer posible la invocación remota de métodos, crear
+aplicaciones con interfaz de usuario web, etc.
+</p>
+
+<h3>Java ME:</h3>
+<p>
+Micro Edition, está enfocada a la creación de programas que se ejecutarán
+en sistemas con recursos limitados, tales como teléfonos móviles, electrodomésticos y
+dispositivos de domótica o equipos para entornos empotrados como la Rasperry Pi y
+similares.
+</p>
+</section>
+
+</main>
+
+<aside>
+<h3>Adicionales</h3>
+<p>Logo de java:</p>
+<img alt="Logo de Java" src="/images/java-logo1-1.png">
+
+<p>Para profundizar en los conceptos presentados en esta pagina puede visitar el siguiente enlace que contendra la fuente de la que se extrajo la informacion</p>
+<a href="https://virtual.unju.edu.ar/pluginfile.php/626234/mod_resource/content/2/Introduccion%20Java.pdf">Introduccion a Java</a>
+</aside>
+
+<footer>
+<h3>Informacion de contacto:</h3>
+<p>Esta pagina fue desarrollada por el alumno Mauricio Joaquin coca si desea contactarse con el puede hacerlo mediante los siguientes enlaces y informacion  </p>
+<p>Correo electronico: mauri13coca@gmail.com</p>
+<a href="https://www.instagram.com/mika.c.c.o_o">Enlace a cuenta de instagram</a>
+</footer>
 
 </body>
 </html>
