finalizacion de la segunda parte del tp3

--- a/tp3_CocaMauricioJoaquin/src/main/resources/templates/index.html
+++ b/tp3_CocaMauricioJoaquin/src/main/resources/templates/index.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Coca Mauricio Joaquin</title>
+<link rel="stylesheet" href="/css/estilos.css"></link>
 </head>
 <body>
 
 <header>
 <h1>Sobre Java</h1>
-</header>
+
 
 <nav>
  <ul>
@@ -17,6 +18,8 @@
  <li><a href="">Ediciones</a></li>
  </ul>
 </nav>
+
+</header>
 
 <main>
 
